# pkg/ocp-proposal-api/proposal-messages.pb.validate.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
 // source: proposal-messages.proto
 
-package ocp_feedback_api
+package ocp_proposal_api
 
 import (
 	"bytes"
