# swagger/api.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "feedback-service.proto",
+    "title": "proposal-service.proto",
     "version": "version not set"
   },
   "consumes": [
@@ -11,169 +11,9 @@
     "application/json"
   ],
   "paths": {
-    "/v1/feedbacks": {
-      "post": {
-        "operationId": "OcpFeedbackApi_CreateMultiFeedbackV1",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiCreateMultiFeedbackV1Response"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiCreateMultiFeedbackV1Request"
-            }
-          }
-        ],
-        "tags": [
-          "OcpFeedbackApi"
-        ]
-      },
-      "patch": {
-        "operationId": "OcpFeedbackApi_UpdateFeedbackV1",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiUpdateFeedbackV1Response"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiFeedback"
-            }
-          }
-        ],
-        "tags": [
-          "OcpFeedbackApi"
-        ]
-      }
-    },
-    "/v1/feedbacks/{feedback}": {
-      "get": {
-        "operationId": "OcpFeedbackApi_DescribeFeedbackV1",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiDescribeFeedbackV1Response"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "feedback",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "uint64"
-          }
-        ],
-        "tags": [
-          "OcpFeedbackApi"
-        ]
-      },
-      "delete": {
-        "operationId": "OcpFeedbackApi_RemoveFeedbackV1",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiRemoveFeedbackV1Response"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "feedback",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "uint64"
-          }
-        ],
-        "tags": [
-          "OcpFeedbackApi"
-        ]
-      }
-    },
-    "/v1/feedbacks/{offset}/{limit}": {
-      "get": {
-        "operationId": "OcpFeedbackApi_ListFeedbacksV1",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiListFeedbacksV1Response"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "offset",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "uint64"
-          },
-          {
-            "name": "limit",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "uint64"
-          }
-        ],
-        "tags": [
-          "OcpFeedbackApi"
-        ]
-      }
-    },
     "/v1/proposals": {
       "post": {
-        "operationId": "OcpFeedbackApi_CreateMultiProposalV1",
+        "operationId": "OcpProposalApi_CreateMultiProposalV1",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -199,11 +39,11 @@
           }
         ],
         "tags": [
-          "OcpFeedbackApi"
+          "OcpProposalApi"
         ]
       },
       "patch": {
-        "operationId": "OcpFeedbackApi_UpdateProposalV1",
+        "operationId": "OcpProposalApi_UpdateProposalV1",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -229,13 +69,13 @@
           }
         ],
         "tags": [
-          "OcpFeedbackApi"
+          "OcpProposalApi"
         ]
       }
     },
     "/v1/proposals/{offset}/{limit}": {
       "get": {
-        "operationId": "OcpFeedbackApi_ListProposalsV1",
+        "operationId": "OcpProposalApi_ListProposalsV1",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -267,13 +107,13 @@
           }
         ],
         "tags": [
-          "OcpFeedbackApi"
+          "OcpProposalApi"
         ]
       }
     },
     "/v1/proposals/{proposal}": {
       "get": {
-        "operationId": "OcpFeedbackApi_DescribeProposalV1",
+        "operationId": "OcpProposalApi_DescribeProposalV1",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -298,11 +138,11 @@
           }
         ],
         "tags": [
-          "OcpFeedbackApi"
+          "OcpProposalApi"
         ]
       },
       "delete": {
-        "operationId": "OcpFeedbackApi_RemoveProposalV1",
+        "operationId": "OcpProposalApi_RemoveProposalV1",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -327,44 +167,12 @@
           }
         ],
         "tags": [
-          "OcpFeedbackApi"
+          "OcpProposalApi"
         ]
       }
     }
   },
   "definitions": {
-    "apiCreateFeedbackV1Response": {
-      "type": "object",
-      "properties": {
-        "feedback": {
-          "type": "string",
-          "format": "uint64"
-        }
-      }
-    },
-    "apiCreateMultiFeedbackV1Request": {
-      "type": "object",
-      "properties": {
-        "feedbacks": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/apiFeedback"
-          }
-        }
-      }
-    },
-    "apiCreateMultiFeedbackV1Response": {
-      "type": "object",
-      "properties": {
-        "feedbacks": {
-          "type": "array",
-          "items": {
-            "type": "string",
-            "format": "uint64"
-          }
-        }
-      }
-    },
     "apiCreateMultiProposalV1Request": {
       "type": "object",
       "properties": {
@@ -397,50 +205,11 @@
         }
       }
     },
-    "apiDescribeFeedbackV1Response": {
-      "type": "object",
-      "properties": {
-        "feedback": {
-          "$ref": "#/definitions/apiFeedback"
-        }
-      }
-    },
     "apiDescribeProposalV1Response": {
       "type": "object",
       "properties": {
         "proposal": {
           "$ref": "#/definitions/apiProposal"
-        }
-      }
-    },
-    "apiFeedback": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "user_id": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "classroom_id": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "comment": {
-          "type": "string"
-        }
-      }
-    },
-    "apiListFeedbacksV1Response": {
-      "type": "object",
-      "properties": {
-        "feedbacks": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/apiFeedback"
-          }
         }
       }
     },
@@ -476,13 +245,7 @@
         }
       }
     },
-    "apiRemoveFeedbackV1Response": {
-      "type": "object"
-    },
     "apiRemoveProposalV1Response": {
-      "type": "object"
-    },
-    "apiUpdateFeedbackV1Response": {
       "type": "object"
     },
     "apiUpdateProposalV1Response": {
